# adventofcode

./: README.md
2021/cpp/: 1_part1.cpp  1_part2.cpp  Makefile  res.txt
2023/rust/: Cargo.toml
2023/rust/input/: 18_input_test2.txt
2023/rust/src/: 01_trebuchet.rs  02_cube_conundrum.rs  03_gear_ratios.rs  04_scratchcards.rs  05_seed_fertilizer.rs  06_wait_for_it.rs  07_camel_cards.rs  08_haunted_wasteland.rs  09_mirage_maintenance.rs  10_pipe_maze.rs  11_cosmic_expansion.rs  12_hot_springs.rs  13_point_of_incidence.rs  14_parabolic_reflector_dish.rs  15_lens_library.rs  16_the_floor_will_be_lava.rs  17_clumsy_crucible.rs  18_lavaduct_lagoon.rs  19_aplenty.rs  20_pulse_propagation.rs  21_step_counter.rs  22_sand_slabs.rs  23_a_long_walk.rs  24_never_tell_me_the_odds.rs  25_snowverload.rs  utils.rs
2024/zig/: build.zig
2024/zig/input/: 02_input_test.txt  10_input_test2.txt  10_input_test3.txt  10_input_test4.txt  19_input_test2.txt  19_input_test3.txt
2024/zig/src/: 01_historian_hysteria.zig  02_rednosed_reports.zig  03_mull_it_over.zig  04_ceres_search.zig  05_print_queue.zig  06_guard_gallivant.zig  07_bridge_repair.zig  08_resonant_collinearity.zig  09_disk_fragmenter.zig  10_hoof_it.zig  11_plutonian_pebbles.zig  12_garden_groups.zig  13_claw_contraption.zig  14_restroom_redoubt.zig  15_warehouse_woes.zig  16_reindeer_maze.zig  17_chronospatial_computer.zig  18_ram_run.zig  19_linen_layout.zig  utils.zig
