[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"
authors = ["Bruno Conde <brunompconde@gmail.com>"]

[[bin]]
name = "01_trebuchet"
path = "src/01_trebuchet.rs"

[[bin]]
name = "02_cube_conundrum"
path = "src/02_cube_conundrum.rs"

[[bin]]
name = "03_gear_ratios"
path = "src/03_gear_ratios.rs"

[dependencies]
regex = "1.10.2"

