[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"
authors = ["Bruno Conde <brunompconde@gmail.com>"]

[[bin]]
name = "01_trebuchet"
path = "src/01_trebuchet.rs"

[[bin]]
name = "02_cube_conundrum"
path = "src/02_cube_conundrum.rs"

[[bin]]
name = "03_gear_ratios"
path = "src/03_gear_ratios.rs"

[[bin]]
name = "04_scratchcards"
path = "src/04_scratchcards.rs"

[[bin]]
name = "05_seed_fertilizer"
path = "src/05_seed_fertilizer.rs"

[[bin]]
name = "06_wait_for_it"
path = "src/06_wait_for_it.rs"

[[bin]]
name = "07_camel_cards"
path = "src/07_camel_cards.rs"

[[bin]]
name = "08_haunted_wasteland"
path = "src/08_haunted_wasteland.rs"

[dependencies]
regex = "1.10.2"

